<resources>
    <string name="app_name">Space Traitors</string>
    <string name="action_settings">Settings</string>

    <!--
          Used for Preferences
    -->
    <string name="pref_lock_max_stats_label">Lock Max Stats</string>
    <string name="pref_lock_max_stats_key" translatable="false">lock_max</string>

    <string name="pref_auto_repair_label">Auto Repair</string>
    <string name="pref_auto_repair_key" translatable="false">auto_repair</string>

    <string name="pref_auto_kill_crew_label">Auto Kill Crew</string>
    <string name="pref_auto_kill_crew_key" translatable="false">auto_kill_crew</string>

    <string name="pref_show_true">Aid Turned On</string>
    <string name="pref_show_false">Aid Deactivated</string>


    <!--Ship Max Stats-->
    <string-array name="battleship_max_stats">
        <item>3</item>
        <item>5</item>
        <item>4</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="navigation_long_name">Navigation</string>
    <string name="navigation_short_name">NAV</string>

    <string name="weapons_long_name">Weapons</string>
    <string name="weapons_short_name">WEA</string>

    <string name="upgrade_long_name">Upgrade</string>
    <string name="upgrade_short_name">UPG</string>

    <string name="cargo_long_name">Cargo</string>
    <string name="cargo_short_name">CRG</string>

    <string name="life_support_long_name">Life Support</string>
    <string name="life_support_short_name">LF</string>

    <string name="shields_long_name">Shields</string>
    <string name="shields_short_name">SHD</string>

    <!-- Fragment Ship Activity -->
    <string name="repaired_phrase">Repaired: </string>
    <string name="damaged_phrase">Damaged: </string>
    <string name="main_ship_name_description">Name of the current ship type.</string>
    <string name="main_upper_speed_description">Image representing increased speed.</string>
    <string name="main_current_speed_description">Current ship speed.</string>
    <string name="main_lower_speed_description">Image representing lower speed.</string>
    <string name="main_start_turn_button">Restart</string>
    <string name="main_start_turn_description">Button to press that starts a new turn.</string>
    <string name="hex_description">Image of a Hexagon with an arrow pointing up. The numbers 1-6 circle clockwise from 12.</string>
    <string name="repair_button">Repair</string>
    <string name="damage_button">Damage</string>
    <string name="new_ship">Take Command</string>
    <string name="load_ship">Resume Command</string>
    <string name="app_name_description">Space Traitors</string>
    <string name="speed_done_button">Done</string>
    <string name="sp_title">Change Speed</string>
    <string name="sd_extra_message">Reminder: Manual speed change limited to +/- 1.</string>
    <string name="sd_plus_description">Plus image for increasing Speed.</string>
    <string name="sd_minus_description">Minus image for lowing speed.</string>
    <string name="td_top_text">Attacking!</string>
    <string name="td_secondary_text">1) Can draw straight line between ships.</string>
    <string name="td_secondline">2) Target is not further away than CURRENT Navigation.</string>
    <string name="td_cancel_button">Cancel</string>
    <string name="td_roll_button">Roll d6:</string>
    <string name="td_roll_result_default">Waiting for Roll.</string>
    <string name="td_done_button">Done</string>
    <string name="ac_title">Attack</string>
    <string name="ac_roll_button">Roll d6:</string>
    <string name="ac_result_default">NA</string>

</resources>
