<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/attack_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/primary_dark"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/ac_title"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/ac_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/primary_text"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ac_roll_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ac_roll_button" />

        <TextView
            android:id="@+id/ac_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/accent"
            android:text="@string/ac_result_default" />
    </LinearLayout>

</android.support.v7.widget.CardView>
