<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ShipData"
            type="com.wordpress.a3dtwentyblog.spacetraitors.ShipData" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/main_ship_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/main_ship_name_description"
            android:text="@{ShipData.shipType}"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Battleship" />

        <include
            android:id="@+id/main_include_ship_stats"
            layout="@layout/ship_stat_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/main_ship_name"
            app:ShipData="@{ShipData}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_ship_name">

        </include>

        <ImageView
            android:id="@+id/main_upper_speed_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/main_include_ship_stats"
            android:contentDescription="@string/main_upper_speed_description"
            android:scaleType="fitXY"
            android:src="@drawable/speedarrowtop"
            app:layout_constraintEnd_toStartOf="@+id/main_action_recycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_include_ship_stats" />

        <TextView
            android:id="@+id/main_current_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/main_upper_speed_image"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:text="@{`` + ShipData.currentSpeed}"
            android:contentDescription="@string/main_current_speed_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/primary_text"
            app:layout_constraintEnd_toStartOf="@+id/main_action_recycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_upper_speed_image"
            tools:text="1" />

        <ImageView
            android:id="@+id/main_lower_speed_image"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/main_current_speed"
            android:contentDescription="@string/main_lower_speed_description"
            android:scaleType="fitXY"
            android:src="@drawable/speedarrowbottom"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_current_speed"
            app:layout_constraintVertical_bias="1.0" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_action_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/main_include_ship_stats"
            android:layout_toEndOf="@+id/main_lower_speed_image"
            android:layout_toRightOf="@+id/main_lower_speed_image"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/main_inclue_crew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/main_lower_speed_image"
            app:layout_constraintTop_toBottomOf="@+id/main_include_ship_stats"
            android:background="@drawable/standard_border"
            tools:listitem="@layout/action_card" />

        <Button
            android:id="@+id/main_start_turn_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:contentDescription="@string/main_start_turn_description"
            android:padding="0dp"
            android:text="@string/main_start_turn_button"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/main_inclue_crew"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toEndOf="@+id/main_lower_speed_image"
            app:layout_constraintTop_toBottomOf="@+id/main_action_recycler"
            tools:text="Restart" />

        <include
            android:id="@+id/main_inclue_crew"
            layout="@layout/crew_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </android.support.constraint.ConstraintLayout>

</layout>